--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -246,15 +246,16 @@ a:hover{
 
 .footer {
     background-color: aliceblue;
-    display: flex;
-    justify-content:center;
-    height: 15%;
-    max-height: 15%;
-    min-height: 15%;
-    width: 190%;
-    align-items: center;
-    align-content: center;
-    flex 0 0 auto;
+        position:  absolute;
+        top: 110vh;
+        display: flex;
+        justify-content:center;
+        height: 15%;
+        max-height: 15%;
+        min-height: 15%;
+        width: 103.9%;
+        align-items: center;
+        align-content: center;
 }
 
 .subFooter{
@@ -632,7 +633,7 @@ a:hover{background-color: #bbbec4; border:#bbbec4; border-radius: 5px }
     top: 15%;
     left: 35%;
     width: 500px;
-    height: 300px;
+    height: 400px;
     padding: 1vh;
     flex-flow: column;
     background-color: aliceblue;
@@ -640,6 +641,7 @@ a:hover{background-color: #bbbec4; border:#bbbec4; border-radius: 5px }
     border-radius: 1vw;
     align-items: center;
     justify-content: center;
+    align-content: center;
 }
 
 .alert {
@@ -656,6 +658,8 @@ a:hover{background-color: #bbbec4; border:#bbbec4; border-radius: 5px }
     font-size: 20px;
     padding: 1%;
     border: #344f21;
+    display: inline-block;
+    width: 98%;
 }
 
 .form-control {
@@ -701,6 +705,7 @@ a:hover{background-color: #bbbec4; border:#bbbec4; border-radius: 5px }
     background-color: #639643;
     border: #e4e7ea;
     border-radius: 1vh;
+    padding 1%;
 
 }
 
@@ -851,4 +856,34 @@ background-color: #71af4e;
     color: goldenrod;
     font-size: 1.1vw;
     padding: 5%;
+}
+
+.Delete{
+     font-family: 'Ubuntu', sans-serif;
+     flex-direction: row;
+     color: aliceblue;
+     background-color: crimson;
+      border: crimson;
+     font-size: 1.5vw;
+     padding: 1vw;
+     border: rgba(220, 20, 60, 0);
+     border-radius: 1vw;
+     width: 20%;
+     height: 40%;
+     text-align: center;
+ }
+
+.Delete:hover{
+    font-family: 'Ubuntu', sans-serif;
+    flex-direction: row;
+    color: aliceblue;
+    background-color: crimson;
+    border: crimson;
+    font-size: 1.5vw;
+    padding: 1vw;
+    border: rgba(220, 20, 60, 0);
+    border-radius: 1vw;
+    width: 20%;
+    height: 40%;
+    text-align: center;
 }
