--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -37,7 +37,7 @@
 
 <div class="main">
     <div class="subMain">
-        <div id="text1"> Добро пожаловать в каркассон!</div>
+        <div id="text1"> Добро пожаловать в Каркассон!</div>
         <a th:href="@{/gameLobby}" id="text2"> Начать игру</a>
     </div>
 </div>
