--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -486,7 +486,7 @@ a:hover{background-color: #bbbec4; border:#bbbec4; border-radius: 5px }
     justify-content: space-between;
     align-items: center;
     padding: 0 20px 0 20px;
-    margin: 0 0 2px 0;
+    margin: 0 0 5px 0;
     border-radius: 5px;
     border: rgba(240, 248, 255, 0);
     width:80%;
@@ -501,7 +501,7 @@ a:hover{background-color: #bbbec4; border:#bbbec4; border-radius: 5px }
     padding: 0 20px 0 20px;
     border-radius: 5px;
     border: rgba(240, 248, 255, 0);
-    margin: 0 0 1px 0;
+    margin: 0 0 5px 0;
     font-size: 1vw;
     text-align: center;
     flex 1 0 auto;
@@ -706,6 +706,7 @@ a:hover{background-color: #bbbec4; border:#bbbec4; border-radius: 5px }
     border: #e4e7ea;
     border-radius: 1vh;
     padding 1%;
+    margin-top: 10px;
 
 }
 
