--- a/src/main/resources/templates/room.html
+++ b/src/main/resources/templates/room.html
@@ -1,8 +1,7 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.w3.org/1999/xhtml"
-      xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
       xmlns:sec="http://www.w3.org/1999/xhtml"
-      layout:decorate="~{layout}">
+      >
 <head>
     <meta charset="UTF-8">
     <title>Идет игра!</title>
@@ -37,6 +36,7 @@
 <!--        <img class="imgGame" th:src="@{/img/avatar.jpg}">-->
 <!--        <div id="orangePlayer">игрок 11232155152</div>-->
 <!--    </div>-->
+    <button id="disconnectBtn">disconnect</button>
 </div>
 <script>
         for(let x=1; x<65; x++) {
