--- a/src/main/resources/templates/room.html
+++ b/src/main/resources/templates/room.html
@@ -36,6 +36,7 @@
 <!--        <img class="imgGame" th:src="@{/img/avatar.jpg}">-->
 <!--        <div id="orangePlayer">игрок 11232155152</div>-->
 <!--    </div>-->
+    <button id="disconnectBtn">disconnected</button>
 </div>
 <script>
         for(let x=1; x<65; x++) {
