--- a/src/main/resources/templates/friends.html
+++ b/src/main/resources/templates/friends.html
@@ -10,7 +10,7 @@
 </head>
 <body class="gameBody">
 <th:block layout:fragment="content">
-<div class="gameMain">
+<div class="gameMain" id="gameMain">
   <div class="gameSubMain1">
     <div id="findButton" class="findButton"> Поиск </div>
     <div><input id="findField" type="text" autocomplete="off" class="finder"></div>
