--- a/src/main/resources/templates/room.html
+++ b/src/main/resources/templates/room.html
@@ -9,6 +9,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" th:href="@{/img/favicon.png}" type="image/png">
     <link rel="stylesheet" th:href="@{/css/style.css}">
+    <link rel="stylesheet" th:href="@{/css/chat.css}">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Ubuntu:wght@500&display=swap" rel="stylesheet">
@@ -20,23 +21,64 @@
 </head>
 <body th:id="${id}" class="inGameBody">
 <div id="inGameMenu" class="inGameMenu">
+    <button id="disconnectBtn">disconnected</button>
     <div class="field1" th:each="user: ${users}" th:id="'User'+ ${user.getId}">
         <img class="imgGame" th:src="@{/img/avatar.jpg}">
         <div id="redPlayer" th:text="${user.getName}" >игрок 11232155152</div>
     </div>
-<!--    <div class="field1">-->
-<!--        <img class="imgGame" th:src="@{/img/avatar.jpg}">-->
-<!--        <div id="bluePlayer">игрок 11232155152</div>-->
-<!--    </div>-->
-<!--    <div class="field1">-->
-<!--        <img class="imgGame" th:src="@{/img/avatar.jpg}">-->
-<!--        <div id="greenPlayer">игрок 11232155152</div>-->
-<!--    </div>-->
-<!--    <div class="field1">-->
-<!--        <img class="imgGame" th:src="@{/img/avatar.jpg}">-->
-<!--        <div id="orangePlayer">игрок 11232155152</div>-->
-<!--    </div>-->
-    <button id="disconnectBtn">disconnected</button>
+
+</div>
+<div class="mask">
+
+    <!-- Main container -->
+    <div class="container">
+
+        <!-- Chat list view -->
+        <section class="list">
+
+            <!-- Chat list header -->
+            <!-- Chat list -->
+
+        </section>
+
+        <!-- Conversation view -->
+        <section class="conversation">
+
+            <!-- Conversation view header -->
+            <header class="conversation__header">
+
+                <div class="conversation__info">
+                    <span class="conversation__status"></span>
+                    <span class="conversation__name">roomName</span>
+                </div>
+                <div class="conversation__header-actions">
+
+                    <button class="conversation__btn btn btn--close" title="Close chat">
+                        <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><line x1="18" y1="6" x2="6" y2="18"></line><line x1="6" y1="6" x2="18" y2="18"></line></svg>
+                    </button>
+                </div>
+            </header>
+
+            <!-- Conversation view messages -->
+            <div class="conversation__body">
+                <div class="conversation__bubble conversation__bubble--left">
+                    <p class="conversation__text">Hey!</p>
+                </div>
+
+            </div>
+
+            <!-- Conversation view footer -->
+            <footer class="conversation__footer">
+                <input type="text" class="conversation__write">
+                <button class="conversation__btn btn btn--send" title="Send message">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><line x1="22" y1="2" x2="11" y2="13"></line><polygon points="22 2 15 22 11 13 2 9 22 2"></polygon></svg>
+                </button>
+            </footer>
+
+        </section>
+
+    </div>
+
 </div>
 <script>
         for(let x=1; x<65; x++) {
@@ -54,5 +96,6 @@
         }
 </script>
 <script th:src="@{/js/app.js}"></script>
+<script th:src="@{/js/chat.js}"></script>
 </body>
 </html>
