--- a/src/main/resources/templates/room.html
+++ b/src/main/resources/templates/room.html
@@ -49,7 +49,7 @@
 
                 <div class="conversation__info">
                     <span class="conversation__status"></span>
-                    <span class="conversation__name">roomName</span>
+                    <span class="conversation__name">Чат</span>
                 </div>
                 <div class="conversation__header-actions">
 
@@ -61,10 +61,6 @@
 
             <!-- Conversation view messages -->
             <div class="conversation__body">
-                <div class="conversation__bubble conversation__bubble--left">
-                    <p class="conversation__text">Hey!</p>
-                </div>
-
             </div>
 
             <!-- Conversation view footer -->
