--- a/src/main/resources/templates/verify.html
+++ b/src/main/resources/templates/verify.html
@@ -19,7 +19,7 @@
 <body class="authBody">
 <div class="auth">
     <div class="defaultVer">
-        На вашу почту было отправлено письмо с кодом. Проверьте!
+        На вашу почту было отправлено письмо
     </div>
     <input type="numder"
            id="code" name="username" class="form-group"
