--- a/src/main/resources/templates/room.html
+++ b/src/main/resources/templates/room.html
@@ -76,22 +76,17 @@
     </div>
 
 </div>
-<script>
-        for(let x=1; x<65; x++) {
-            let div = document.createElement("div");
-            div.className = "field";
-            div.id = "field_" + x;
-            document.body.appendChild(div);
-            for(let y=1; y<65; y++) {
-                let parent = document.querySelector('#field_' + x)
-                let div = document.createElement("div");
-                div.className = "tile";
-                div.id = x + "_" + y;
-                parent.appendChild(div);
-            }
-        }
-</script>
+
+<div id="deckOfCard" class="DeckHolder">
+    <div id="tile" class="Tile"  draggable="true" ondragstart="onDragStart(event);">
+
+    </div>
+</div>
+
+
+
 <script th:src="@{/js/app.js}"></script>
 <script th:src="@{/js/chat.js}"></script>
+<script th:src="@{/js/room.js}"></script>
 </body>
 </html>
