--- a/src/main/resources/templates/room.html
+++ b/src/main/resources/templates/room.html
@@ -78,29 +78,32 @@
 </div>
 
 <div id="deckOfCard" class="DeckHolder">
+    <div    class="buttons">
+        <button id="rotateLeft">поворот</button>
+
+    </div>
     <div class="deckOfCardInside" id="TileSpot">
-    <button id="rotateLeft">лево</button>
-    <button id="rotateRight">право</button>
     </div>
     <div class="deckOfCardInside">
-        <table class="MeepleTable" >
-            <tr class="MeepleSpot">
-                <td></td>
-                <td></td>
-                <td></td>
+        <table class="MeepleTable">
+            <tbody><tr class="MeepleSpot">
+                <td id="NORTH_WEST"   > <img class="meeple"  src="/img/meeple/Empty.png"></td>
+                <td id="NORTH"> <img class="meeple"  src="/img/meeple/Empty.png"></td>
+                <td id="NORTH_EAST"> <img class="meeple"  src="/img/meeple/Empty.png"></td>
             </tr>
             <tr class="MeepleSpot">
-                <td></td>
-                <td></td>
-                <td></td>
+                <td id="WEST"> <img class="meeple"  src="/img/meeple/Empty.png"></td>
+                <td id="CENTER"> <img class="meeple"  src="/img/meeple/Empty.png"></td>
+                <td id="EAST"> <img class="meeple"  src="/img/meeple/Empty.png"></td>
             </tr>
             <tr class="MeepleSpot">
-                <td></td>
-                <td></td>
-                <td></td>
+                <td id="SOUTH_WEST"> <img class="meeple"  src="/img/meeple/Empty.png"></td>
+                <td id="SOUTH"> <img class="meeple"  src="/img/meeple/Empty.png"></td>
+                <td id="SOUTH_EAST"> <img class="meeple"  src="/img/meeple/Empty.png"></td>
             </tr>
-        </table>
+            </tbody></table>
     </div>
+</div>
 </div>
 
 <div  class="allField">
